--- a/jeux-de-plateau.html
+++ b/jeux-de-plateau.html
@@ -17,70 +17,78 @@
 
     <!--Navbar-->
 
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/logo-lesplay.png"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            JEUX
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Jeux de dés</a></li>
-                            <li><a class="dropdown-item" href="#">Jeux de cartes</a></li>
-                            <li><a class="dropdown-item" href="#">Jeux de plateaux</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            PROMOS
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">promos 1</a></li>
-                            <li><a class="dropdown-item" href="#">promos 2</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link">PANIER</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Rechercher un article"
-                        aria-label="Search">
-                    <button class="btn" type="submit">Rechercher</button>
-                </form>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            PROFIL
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Enregistrement</a></li>
-                            <li><a class="dropdown-item" href="#">Connexion</a></li>
-                            <li><a class="dropdown-item" href="#">Mon compte</a></li>
-                            <li><a class="dropdown-item" href="#">Mes commandes</a></li>
-                            <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
-                            <li><a class="dropdown-item" href="#">Déconnexion</a></li>
-                        </ul>
-                    </li>
-                </ul>
+
+    <header>
+        <img class="logo" src="img/logo-lesplay.png">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                JEUX
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Jeux de dés</a></li>
+                                <li><a class="dropdown-item" href="#">Jeux de cartes</a></li>
+                                <li><a class="dropdown-item" href="#">Jeux de plateaux</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                PROMOS
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">promos 1</a></li>
+                                <li><a class="dropdown-item" href="#">promos 2</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">PANIER</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Rechercher un article"
+                            aria-label="Search">
+                        <button class="btn" type="submit">Rechercher</button>
+                    </form>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                PROFIL
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Enregistrement</a></li>
+                                <li><a class="dropdown-item" href="#">Connexion</a></li>
+                                <li><a class="dropdown-item" href="#">Mon compte</a></li>
+                                <li><a class="dropdown-item" href="#">Mes commandes</a></li>
+                                <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
+                                <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <main>
+
+
+
+
         <section class="container">
 
 
@@ -91,47 +99,29 @@
                         <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
                         <div class="carousel-caption d-none d-md-block">
                             <p class="offre">Offre de bienvenue</p>
-                            <p><a class="btn btn-lg btn-primary mb-4" href="#">Enregistrement</a></p>
-                        </div>
-                    </div>
-
-                    <div class="flex carousel-item">
-                        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="offre">
-                        <div class="carousel-caption d-none d-md-block">
-                            <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix. </p>
+                            <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
                         </div>
                     </div>
 
                     <div class="carousel-item">
-                        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="npuveautés">
+                        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="moitiéprix">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>Retrouvez nos nouveautés</p>
-                        </div>
-
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                                aria-label="Slide 3"></button>
+                            <p class="moitiéprix">Du 23 septembre au 7 octobre 2023,</p>
+                            <p>pour l'achat d'un jeu, le 2ème est à moitié prix. </p>
                         </div>
                     </div>
+
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
 
 
-            <div class="text-center mt-5">
+            <div class="text-center mt-5 text-white">
                 <h2>Jeux de plateaux</h2>
             </div>
             <div class="listcard1 text-center row justify-content-evenly mt-4">
@@ -139,33 +129,36 @@
                     <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
                     <div class="card-body">
                         <h5 class="card-title text-white">7wonders</h5>
-                        <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
+                        <p class="card-text text-white">Jeu de société | À partir de 10 ans | 3
                             à 7
                             joueurs | 30 minutes</p>
+                            <p class="card-text text-white fw-bold">36,99€</p>
                         <a href="#" class="btn bg-white text-dark">Voir Plus</a>
                     </div>
                 </div>
 
 
                 <div class="card border-4" style="width: 18rem;">
-                    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+                    <img src="img/jeuxdeplateaux/monopdbz-cultura.jpg" class="card-img-top1" alt="Image Monopoly">
                     <div class="card-body">
-                        <h5 class="card-title text-white">7wonders</h5>
-                        <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
-                            à 7
-                            joueurs | 30 minutes</p>
+                        <h5 class="card-title text-white">Monopoly</h5>
+                        <p class="card-text text-white">Jeu de société | À partir de 8 ans | 2
+                            à 6
+                            joueurs</p>
+                            <p class="card-text text-white fw-bold">24,99€</p>
                         <a href="#" class="btn bg-white text-dark">Voir Plus</a>
                     </div>
                 </div>
 
 
                 <div class="card border-4" style="width: 18rem;">
-                    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+                    <img src="img/jeuxdeplateaux/scrabblejunior-leclerc.jpg" class="card-img-top2" alt="Image Scrabble">
                     <div class="card-body">
-                        <h5 class="card-title text-white">7wonders</h5>
-                        <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
-                            à 7
-                            joueurs | 30 minutes</p>
+                        <h5 class="card-title text-white">Scrabble Junior</h5>
+                        <p class="card-text text-white">Jeu de société | À partir de 5 ans | 2
+                            à 4
+                            joueurs</p>
+                            <p class="card-text text-white fw-bold">18,99€</p>
                         <a href="#" class="btn bg-white text-dark">Voir Plus</a>
                     </div>
                 </div>
@@ -173,43 +166,33 @@
 
             <div class="listcard2  text-center row justify-content-evenly mt-5">
                 <div class="card border-4" style="width: 18rem;">
-                    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+                    <img src="img/jeuxdeplateaux/tactik-amazon.jpg" class="card-img-top3" alt="Image Tactik">
                     <div class="card-body">
-                        <h5 class="card-title text-white">7wonders</h5>
-                        <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
-                            à 7
-                            joueurs | 30 minutes</p>
+                        <h5 class="card-title text-white">Tac-Tik</h5>
+                        <p class="card-text text-white">Jeu de société | À partir de 7 ans | 2
+
+                            à 6 joueurs | 45 minutes</p>
+                            <p class="card-text text-white fw-bold">39,99€</p>
                         <a href="#" class="btn bg-white text-dark">Voir Plus</a>
                     </div>
                 </div>
 
 
                 <div class="card border-4" style="width: 18rem;">
-                    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+                    <img src="img/jeuxdeplateaux/trivialpursuit-leclerc.jpg" class="card-img-top4"
+                        alt="Image Trivial Pursuit">
                     <div class="card-body">
-                        <h5 class="card-title text-white">7wonders</h5>
-                        <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
-                            à 7
-                            joueurs | 30 minutes</p>
+                        <h5 class="card-title text-white">Trivial Pursuit</h5>
+                        <p class="card-text text-white">Jeu de société | À partir de 8 ans | 2
+
+                            joueurs et plus</p>
+                            <p class="card-text text-white fw-bold">31,99€</p>
                         <a href="#" class="btn bg-white text-dark">Voir Plus</a>
                     </div>
                 </div>
             </div>
-
     </main>
-
-
-
-
     </section>
-
-
-
-
-
-
-
-
 
 
 
@@ -217,5 +200,19 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </body>
+
+
+<div class="container">
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
+    </footer>
+</div>
 
 </html>
