--- a/Jeux-de-des.html
+++ b/Jeux-de-des.html
@@ -1,5 +1,5 @@
-!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -14,45 +14,48 @@
 
 <body>
 
-    <header>
-      <img class="logo" src="img/logo-lesplay.png">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  JEUX
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Jeux de dés</a></li>
-                  <li><a class="dropdown-item" href="#">Jeux de cartes</a></li>
-                  <li><a class="dropdown-item" href="#">Jeux de plateaux</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  PROMOS
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Offre de bienvenue</a></li>
-                  <li><a class="dropdown-item" href="#">Offres du moment</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link">PANIER</a>
-              </li>
-            </ul>
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img class="logo" src="img/logo-lesplay.png">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                JEUX
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Jeux de dés</a></li>
+                <li><a class="dropdown-item" href="#">Jeux de cartes</a></li>
+                <li><a class="dropdown-item" href="#">Jeux de plateaux</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                PROMOS
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Offre de bienvenue</a></li>
+                <li><a class="dropdown-item" href="#">Offres du moment</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">PANIER</a>
+            </li>
+          </ul>
+          
+          <div class="d-flex">
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
               <button class="btn" type="submit">Rechercher</button>
@@ -75,8 +78,9 @@
             </ul>
           </div>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
   
     <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
   
@@ -85,6 +89,7 @@
           <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
           <div class="carousel-caption d-none d-md-block">
             <p class="offre">Offre de bienvenue</p>
+            <p class="vingt">20% de réduction sur votre première commande</p>
             <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
           </div>
         </div>
@@ -119,7 +124,7 @@
         <h2>Jeux de dés</h2>
 
     <div class="listcard1 text-center row justify-content-evenly mt-4">
-        <div class="card border-4" style="width: 18rem;">
+        <div class="card border-4 p-2" style="width: 18rem;">
             <img src="img/jeuxdedes/strike.jpeg" class="card-img-top" alt="Image Strike">
             <div class="card-body">
                 <h5 class="card-title text-white">Strike</h5>
@@ -132,51 +137,53 @@
         </div>
 
 
-        <div class="card border-4" style="width: 18rem;">
-            <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image Yatzee">
+        <div class="card border-4 p-2" style="width: 18rem;">
+            <img src="img/jeuxdedes/yahtzee1.jpeg" class="card-img-top" alt="Image Yatzee">
             <div class="card-body">
                 <h5 class="card-title text-white">Yatzee</h5>
-                <p class="card-text text-white">Jeu de société | À partir de 10 ans | 3
-                    à 7
-                    joueurs | 30 minutes</p>
-                    <p>16€99</p>
+                <p class="card-text text-white">Jeu de société | Dès 8 ans | 2 à 8 joueurs       
+                   | 30 min</p>
+                    <p>20€26</p>
                 <a href="#" class="btn bg-white text-dark">Voir Plus</a>
             </div>
         </div>
 
 
-        <div class="card border-4" style="width: 18rem;">
-            <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+        <div class="card border-4 p-2" style="width: 18rem;">
+            <img src="img/jeuxdedes/dice force1.jpeg" class="card-img-top" alt="Image 7wonders">
             <div class="card-body">
-                <h5 class="card-title text-white">7wonders</h5>
-                <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
-                    à 7
-                    joueurs | 30 minutes</p>
+                <h5 class="card-title text-white">Dice Force</h5>
+                <p class="card-text text-white">Jeu de société | Dès 10 ans | 2
+                    à 4
+                    joueurs | 30 min à 1 heure</p>
+                    <p>42€95</p>
                 <a href="#" class="btn bg-white text-dark">Voir Plus</a>
             </div>
         </div>
     </div>
 
     <div class="listcard2  text-center row justify-content-evenly mt-5">
-        <div class="card border-4" style="width: 18rem;">
-            <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+        <div class="card border-4 p-2" style="width: 18rem;">
+            <img src="img/jeuxdedes/qwixx1.jpeg" class="card-img-top" alt="Image 7wonders">
             <div class="card-body">
-                <h5 class="card-title text-white">7wonders</h5>
-                <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
-                    à 7
-                    joueurs | 30 minutes</p>
+                <h5 class="card-title text-white">Qwixx</h5>
+                <p class="card-text text-white">Jeu de société | Dès 8 ans | 2
+                    à 5
+                    joueurs | 15 min</p>
+                    <p>16€99</p>
                 <a href="#" class="btn bg-white text-dark">Voir Plus</a>
             </div>
         </div>
 
 
-        <div class="card border-4" style="width: 18rem;">
-            <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+        <div class="card border-4 p-2" style="width: 18rem;">
+            <img src="img/jeuxdedes/perudo1.jpeg" class="card-img-top" alt="Image 7wonders">
             <div class="card-body">
-                <h5 class="card-title text-white">7wonders</h5>
-                <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
-                    à 7
+                <h5 class="card-title text-white">Perudo</h5>
+                <p class="card-text text-white">Jeu de société | Dès 8 ans | 2
+                    à 6
                     joueurs | 30 minutes</p>
+                    <p>19€40</p>
                 <a href="#" class="btn bg-white text-dark">Voir Plus</a>
             </div>
         </div>
@@ -190,13 +197,12 @@
   <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
       </ul>
-      <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
+      <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
     </footer>
   </div>
 
