--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
         <div class="carousel-caption d-none d-md-block">
           <p class="offre">Offre de bienvenue</p>
+          <p class="vingt">20% de réduction sur votre première commande</p>
           <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
         </div>
       </div>
@@ -145,13 +146,12 @@
   <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
       </ul>
-      <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
+      <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
     </footer>
   </div>
 
