--- a/jeux-de-plateau.html
+++ b/jeux-de-plateau.html
@@ -7,8 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Let's Play</title>
+  <link rel="stylesheet" href="css/style2.css">
+  <title>Let's Play - Jeux de plateaux</title>
 
 </head>
 
@@ -126,41 +126,49 @@
     </nav>
   </header>
 
-        <section class="container">
-            <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+  <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+  
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
+        <div class="carousel-caption d-none d-md-block">
+          <p class="offre">Offre de bienvenue</p>
+          <p class="vingt">20% de réduction sur votre première commande</p>
+          <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+        </div>
+      </div>
 
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
-                        <div class="carousel-caption d-none d-md-block">
-                            <p class="offre">Offre de bienvenue</p>
-                            <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
-                        </div>
-                    </div>
+        <div class="carousel-item">
+          <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
+            <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+          </div>
+      
 
-                    <div class="carousel-item">
-                        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="moitiéprix">
-                        <div class="carousel-caption d-none d-md-block">
-                            <p class="moitiéprix">Du 23 septembre au 7 octobre 2023,</p>
-                            <p>pour l'achat d'un jeu, le 2ème est à moitié prix. </p>
-                        </div>
-                    </div>
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        </div>
+      </div>
+    </div>
 
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                    </div>
-                </div>
-            </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
 
-            <div class="text-center mt-5 text-white">
-                <h2>Jeux de plateaux</h2>
+            <div class="titre text-center mt-5 text-white">
+                <h1>Jeux de plateaux</h1>
             </div>
             <div class="listcard1 text-center row justify-content-evenly mt-4">
-                <div class="card border-4" style="width: 18rem;">
+                <div class="card border-4 p-2" style="width: 18rem;">
                     <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
                     <div class="card-body">
                         <h5 class="card-title text-white">7wonders</h5>
@@ -168,7 +176,7 @@
                             à 7
                             joueurs | 30 minutes</p>
                         <p class="card-text text-white fw-bold">36,99€</p>
-                        <a href="#" class="btn bg-white text-dark">Voir Plus</a>
+                        <a href="#" class="btn3 text-dark">Voir Plus</a>
                     </div>
                 </div>
 
@@ -181,7 +189,7 @@
                             à 6
                             joueurs</p>
                         <p class="card-text text-white fw-bold">24,99€</p>
-                        <a href="#" class="btn bg-white text-dark">Voir Plus</a>
+                        <a href="#" class="btn3 text-dark">Voir Plus</a>
                     </div>
                 </div>
 
@@ -194,7 +202,7 @@
                             à 4
                             joueurs</p>
                         <p class="card-text text-white fw-bold">18,99€</p>
-                        <a href="#" class="btn bg-white text-dark">Voir Plus</a>
+                        <a href="#" class="btn3 text-dark">Voir Plus</a>
                     </div>
                 </div>
             </div>
@@ -208,7 +216,7 @@
 
                             à 6 joueurs | 45 minutes</p>
                         <p class="card-text text-white fw-bold">39,99€</p>
-                        <a href="#" class="btn bg-white text-dark">Voir Plus</a>
+                        <a href="#" class="btn3 text-dark">Voir Plus</a>
                     </div>
                 </div>
 
@@ -222,7 +230,7 @@
 
                             joueurs et plus</p>
                         <p class="card-text text-white fw-bold">31,99€</p>
-                        <a href="#" class="btn bg-white text-dark">Voir Plus</a>
+                        <a href="#" class="btn3 text-dark">Voir Plus</a>
                     </div>
                 </div>
             </div>
