--- a/unjeudedes.html
+++ b/unjeudedes.html
@@ -7,8 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Let's Play - Jeux de cartes</title>
+  <link rel="stylesheet" href="css/style5.css">
+  <title>Let's Play - Strike </title>
 
 </head>
 
@@ -126,12 +126,64 @@
     </nav>
   </header>
 
+  <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
+        <div class="carousel-caption d-none d-md-block">
+          <p class="offre">Offre de bienvenue</p>
+          <p class="vingt">20% de réduction sur votre première commande</p>
+          <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
+        <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+      </div>
+
+
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+      </div>
+    </div>
+  </div>
+
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+  </div>
 
 
 
+  <div class="card border-4" style="width: 18rem;">
+    <img src="img/jeuxdedes/strike.jpeg" class="card-img-top" alt="Strike">
+    <ul class="images row list-group-flush">
+      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top" alt="Strike"></li>
+      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike3-espritjeu.jpg" class="card-img-top" alt="Strike"></li>
+      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike2-espritjeu.jpg" class="card-img-top" alt="Strike"></li>
+    </ul>
+  </div>
 
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title"> Strike</h5>
+      <h6 class="card-subtitle mb-2 text-body-secondary">Strike</h6>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
 
-
+    <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+  </div>
 
 
 
